kubernetes/apps/default/recommendarr/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recommendarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`recommendarr.f9.casa`)
      kind: Rule
      services:
        - name: recommendarr
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
